terminal_logs_20250308_222719.txt
  File "/Users/sethdawson/Downloads/browser-use-RE/web-ui/webui.py", line 1423
    tool_calling_method=tool_calling_method
                        ^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
